--- a/src/pages/Trade/TradeContainer.css
+++ b/src/pages/Trade/TradeContainer.css
@@ -78,7 +78,7 @@
   width: 100%;
   height: 90vh;
   border: none;
-  overflow-y: scroll;
+  overflow-y: auto;
   top: 0;
   position: fixed;
   background: var(--trade-background);
